[package]
name = "blockchain_rust"
authors = ["Mars Zuo <marszuo@foxmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
data-encoding = "2.3.2"
num-bigint = "0.4.3"
sled = "0.34.7"
serde = { version = "1.0.132", features = ["derive"] }
bincode = "1.3.3"
structopt = "0.3.25"
clap = "2.34.0"